# Min-UI

./: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/: globals.css  layout.tsx  page.tsx
components/: Chat.tsx  ControlBar.tsx  Orb.tsx  SettingsDialog.tsx  SidebarDock.tsx
components/ui/: tilt-card.tsx
components/widgets/: ClockWidget.tsx  FavoritesWidget.tsx  MusicWidget.tsx  TodoWidget.tsx  WeatherWidget.tsx
hooks/: useWebSocket.ts
lib/: utils.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CompassDock.tsx  ControlBar.tsx  Orb.tsx  SettingsDialog.tsx  StatusDot.tsx  WidgetDock.tsx
src/components/ui/: button.tsx  dialog.tsx  input.tsx  select.tsx  slider.tsx  switch.tsx  tabs.tsx
src/components/widgets/: ClockWidget.tsx  FavoritesWidget.tsx  MusicWidget.tsx  TodoWidget.tsx  WeatherWidget.tsx
src/hooks/: useConfig.ts  useWebSocket.ts
src/types/: index.ts
types/: index.ts
