[package]
name = "min"
version = "1.0.0"
description = "MIN AI Desktop Assistant"
authors = ["Usuario"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
